<resources>
    <string name="app_name">SampleApp</string>

    <!--    Sign in fragment-->
    <string name="continue_string">Continue</string>
    <string name="welcome_string">Welcome to MaNaDr</string>
    <string name="guideline_string">Enter your phone number to continue</string>
    <string name="hint_phone_string">Enter your phone number</string>
    <string name="invalid_string">Invalid phone number</string>
    <string name="otp_authen_string">OTP Authentication</string>
    <string name="content_string">How should we send you OTP code?</string>
    <string name="text_message_string">Text Message (SMS)</string>
    <string name="voice_call_string">Voice Call</string>
    <string name="check_phone_string">Please check your phone number</string>

    <!--    OTP fragment-->
    <string name="verification_string">OTP verification</string>
    <string name="guideline_otp_string">Enter the 6-digit code just sent to</string>
    <string name="wait_string">Please wait for OTP</string>
    <string name="resend_string">Resend</string>
    <string name="notice_string">Didn\'t get a text</string>

    <!--    Registration Activity-->
    <string name="registration_string">Registration</string>
    <string name="first_name_string">First Name</string>
    <string name="first_name_hint_string">Enter your first Name</string>
    <string name="last_name_string">Last Name</string>
    <string name="last_name_hint_string">Enter your last Name</string>
    <string name="nric_string">NRIC</string>
    <string name="nric_hint_string">Enter your NRIC</string>
    <string name="email_string">Email</string>
    <string name="email_hint_string">Enter your email</string>
    <string name="optional_string">(optional)</string>
    <string name="policy_string">By creating an MaNaDr account, you confirm that you accept <font color="#30a1f9">Terms and Conditions</font> &amp; <font color="#30a1f9">Privacy Policy</font></string>
    <string name="create_string">Create MaNaDr Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_name_valid_string">First name is required</string>
    <string name="last_name_valid_string">Last name is required</string>
    <string name="nric_valid_string">NRIC is required</string>
    <string name="email_valid_string">Email is invalid</string>

    <!--    Pop up-->
    <string name="title_information_popup">Oops!</string>
    <string name="otp_message_valid_string">OTP is valid</string>
    <string name="otp_message_empty_valid_string">OTP is empty</string>
    <string name="ok_string">OK</string>


    <!--    Profile fragment-->
    <string name="full_name_string">Full name</string>

</resources>
