<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_edge"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_authen_string"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        style="@style/TextStyle8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_string"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"
        style="@style/TextStyle9" />

    <Button
        android:id="@+id/bt_request_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_message_string"
        android:textColor="@drawable/text_color"
        android:background="@drawable/popup_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:enabled="false"
        android:text="@string/voice_call_string"
        android:textColor="@color/warm_grey"
        android:background="@color/white_two"/>

</LinearLayout>