<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/group_2"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_string"
        android:layout_marginTop="32dp"
        style="@style/TextStyle3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guideline_string"
        android:layout_marginTop="8dp"
        style="@style/TextStyle4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp">

        <Spinner
            android:id="@+id/spinner_phone_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="style/Widget.App.Spinner"
            android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/ed_phone_number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="phone"
        android:hint="@string/hint_phone_string"
        app:backgroundTint="@color/pinkish_grey"
        android:background="@android:color/transparent"/>

    </LinearLayout>

    <View
        android:id="@+id/view_valid"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/white_two"/>

    <TextView
        android:id="@+id/tv_valid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/invalid_string"
        android:textStyle="normal"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:textColor="@color/tomato"
        android:visibility="gone"/>

</LinearLayout>